--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -229,6 +229,10 @@ p, label {
   border-radius: 5px;
 }
 
+#searchProd {
+  margin-left: 10px;
+  background-color: white;
+}
 /*charts */
 
 #charts {
