--- a/views/manager.hbs
+++ b/views/manager.hbs
@@ -75,16 +75,17 @@
                     <input type="text" class="form-control" id="productUpdateStock" placeholder="Stock QUantity">
                     </div>
                     <button id="submitUpdate" type="button" class="btn btn-lg btn-primary">Edit</button>
+                    <button id="searchProd" type="button" class = "btn"  data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>  Search Product</button>
                 </form>
               </div>
           </div>
       </div>  
     <hr />
- <!--   <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
     
       <!-- Modal content-->
-  <!--    <div class="modal-content">
+      <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">Search by Product Id</h4>
@@ -99,9 +100,9 @@
         </div>
       </div>
       <!--End of Modal content-->
-     <!--   </div>
+        </div>
     
-</div> -->
+</div> 
   <!--  <div class="container"> -->
         <footer class="footer">
             <p>&copy; 2018 DIME Company, Inc.</p>
