--- a/views/charts.hbs
+++ b/views/charts.hbs
@@ -11,7 +11,7 @@
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <link href="assets/css/stickyfooter.css" rel="stylesheet">
+ <!--   <link href="assets/css/stickyfooter.css" rel="stylesheet"> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   </head>
   <body>
@@ -47,16 +47,17 @@
 
           </div>
       </div>
-    
+
 <hr/>
 
-      <footer class="footer">
+   <!--   <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
-      </footer>
-  </body>
+      </footer> -->
+
 
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script src="/assets/js/apiCalls.js"></script>
       <script src="/assets/js/chart.js"></script>
+      </body>
 </html>
