--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -11,7 +11,7 @@
     <!-- Custom styles for this template -->
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
    <link href="assets/css/styles.css" rel="stylesheet">
-   <link href="assets/css/stickyfooter.css" rel="stylesheet">
+  <!-- <link href="assets/css/stickyfooter.css" rel="stylesheet"> -->
 
   </head>
   <body>
@@ -64,9 +64,9 @@
         </div>
       </div>
 </div>
-      <footer class="footer">
+ <!--  <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
-      </footer>
+      </footer> -->
     
   </body>
 </html>
