--- a/views/order.hbs
+++ b/views/order.hbs
@@ -9,7 +9,7 @@
     <!-- Bootstrap core CSS -->
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-    <link href="assets/css/stickyfooter.css" rel="stylesheet">
+   <!-- <link href="assets/css/stickyfooter.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   
 
@@ -138,9 +138,9 @@
     </div>
   </div>
 
-     <footer class="footer">
+ <!--   <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
-      </footer>
+      </footer> -->
 
   
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
