--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
   <link href="assets/css/styles.css" rel="stylesheet" type="text/css">
-  <link href="assets/css/stickyfooter.css" rel="stylesheet" type="text/css">
+<!--  <link href="assets/css/stickyfooter.css" rel="stylesheet" type="text/css"> -->
 
 </head>
 <body>
@@ -67,9 +67,9 @@
 </div> 
   <hr>
 
-      <footer class="footer">
+   <!--   <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
-      </footer>     
+      </footer>   -->   
 
 </body>
 </html>
